# AudioVisualizer_RenK

./: .gitignore  .pre-commit-config.yaml  AudioVisualizer.spec  CHANGELOG.md  LICENSE  README.md  THIRD-PARTY-NOTICES.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: CODEOWNERS
plan/: architecture-and-code-flow.md  audio-visualizer-plan.md  development-phases.md  git-and-versioning.md  phase-0a06-visual-modes.md  phase-0a07-mode-consolidation.md  phase-0b-candidates.md  phase-0b-d-visual-modes.md  repository-and-code-layout.md  testing.md  visual-mode-ideas.md
tests/: conftest.py  test_analysis.py  test_autocycle_phase0b03.py  test_background_phase10.py  test_background_phase1001.py  test_beat_buttons_phase0b13.py  test_cursor_color_phase0b17.py  test_cursor_color_phase0b18.py  test_devices_phase0b01.py  test_dropdown.py  test_foreground_phase0b20.py  test_foreground_phase0b21.py  test_foreground_phase0b22.py  test_foreground_phase0b23.py  test_frame.py  test_freq_direction.py  test_fx_phase0b17.py  test_fx_phase0b19.py  test_history_phase0b16.py  test_intensity_phase0b15.py  test_locks_phase0b10.py  test_logo_phase9.py  test_looks_phase0b02.py  test_meters_spark.py  test_modes_phase0b09.py  test_modes_phase0b11.py  test_modes_phase0bd.py  test_modes_phase1002.py  test_modes_phase1006.py  test_modes_phase1007.py  test_onset.py  test_particles.py  test_registry.py  test_settings.py  test_smoke.py  test_source.py  test_stereo_comet_phase0b19.py  test_ui_logic.py  test_ui_phase903.py  test_visuals.py  (+5 more)
tools/: README.md  _Common.ps1  build-exe.cmd  (+15 more)
(+92 files in other folders)
