[project]
name = "audio-visualizer"
version = "0.1.0"
description = "Windows system-audio visualizer (WASAPI loopback + pygame)."
requires-python = ">=3.12"
readme = "README.md"

# Runtime deps are pinned in requirements.txt (Windows-only).
dependencies = []

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]
ignore = []

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.mypy]
python_version = "3.12"
warn_unused_ignores = true
ignore_missing_imports = true
files = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
